# elisp-tree-sitter

./: .dir-locals.el  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Cask  Eask  LICENSE  Makefile  README.md  shell.nix  tree-sitter-builder.el  tree-sitter-core.el  tree-sitter-debug.el  tree-sitter-langs.el  tree-sitter-query.el  tree-sitter-tests.el  tree-sitter.el
.azure-pipelines/: grammar-bundle.yml  main.yml  release.yml
.azure-pipelines/steps/: -build.yml  -create-grammar-bundle.yml  -github-release.yml  -package.yml  -retrieve-binaries.yml  -save-binaries.yml  -test.yml  install-cask.yml  install-emacs.yml  install-rust.yml  set-up-llvm.yml  set-up-tree-sitter-cli.yml  setup-tree-sitter-cli.yml
.azure-pipelines/steps/grammar-bundle/: -create.yml  -save.yml  -upload.yml
.cargo/: config.toml
.github/script/: setup-cask  setup-cask.ps1  setup-llvm  setup-llvm.ps1
.github/workflows/: doc.yml  integ.yml  main.yml  release.yml  shell.yml  update-submodules.yml
core/: .gitignore  Cargo.toml  Cask  Eask  lts--mac-load.el  lts-dyn-get.el  lts.el  tsc--mac-load.el  tsc-autoloads.el  tsc-dyn-get.el  tsc-obsolete.el  tsc.el
core/src/: buffer.rs  build.rs  cursor.rs  error.rs  lang.rs  lib.rs  node.rs  parser.rs  query.rs  tree.rs  types.rs
doc/: -config-ox-hugo.el  config.toml  emacs-tree-sitter.org  emacsconf2020.org  fix-ox-hugo.el
doc/layouts/partials/: XXX  custom-head.html  header.html  menu.html  next-prev-page.html  tree-of-sections.html
doc/static/css/: xxx.css
doc/static/img/: emacs-tree-sitter.xcf
langs/: .gitattributes  .gitignore  CHANGELOG.md  Cask  README.org  tree-sitter-langs-build.el  tree-sitter-langs.el  wat-mode.el
langs/queries/c/: highlights.scm
langs/queries/cpp/: highlights.scm
langs/queries/css/: highlights.scm
lisp/: tree-sitter--mac-load.el  tree-sitter-cli.el  tree-sitter-core.el  tree-sitter-debug.el  tree-sitter-dyn-get.el  tree-sitter-extras.el  tree-sitter-highlight.el  tree-sitter-hl.el  tree-sitter-imenu.el  tree-sitter-indentation.el  tree-sitter-langs.el  tree-sitter-load.el  tree-sitter-query-faces.el  tree-sitter-query.el  tree-sitter-tests.el  tree-sitter.el
lisp/test-files/: extend-region.rs  hl-region-vs-query-region.js  matches-vs-captures.json  range-restriction-and-early-termination.c  types.rs
src/: cursor.rs  highlight.rs  lang.rs  lib.rs  matches_vs_captures.rs  node.rs  parser.rs  query.rs  tree.rs  types.rs
tests/: .gitattributes  main.el  tree-sitter-bench.el  tree-sitter-tests-utils.el  tree-sitter-tests.el  tsc-build.el  tsc-dyn-get-tests.el
tests/data/: change-case-region.rs  delete-non-ascii-text.rs  extend-region.rs  hl.py  narrowing.bash
(+15 files in other folders)
