[package]
name = "emacs-tree-sitter"
version = "0.1.0"
authors = ["Tuấn-Anh Nguyễn <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
name = "tree_sitter_dyn"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.12.1"
libloading = "0.5.1"
tree-sitter = "0.6.0"

[profile.release]
opt-level = 3
lto = "thin"
