[package]
name = "emacs-tree-sitter"
version = "0.9.1"
authors = ["Tuấn-Anh Nguyễn <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
name = "tree_sitter_dyn"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.14.0"
libloading = "0.6.2"
tree-sitter = "0.16.1"
once_cell = "1.2.0"

[patch.crates-io.tree-sitter]
git = "https://github.com/tree-sitter/tree-sitter"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release.build-override]
opt-level = 0
