[package]
name = "emacs-tree-sitter"
version = "0.15.1"
authors = ["Tuấn-Anh Nguyễn <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
name = "tsc_dyn"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.17"
libloading = "0.7.0"
tree-sitter = "0.19.4"
once_cell = "1.7.2"
