[package]
name = "emacs-tree-sitter"
version = "0.18.0"
authors = ["Tuấn-Anh Nguyễn <ubolonton@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
name = "tsc_dyn"
crate-type = ["cdylib"]

[dependencies]
emacs = { version = "0.19", features = ["nonzero-integer-conversion"] }
libloading = "0.7.0"
tree-sitter = "0.22"
once_cell = "1.7.2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release.build-override]
opt-level = 0
